[package]
name = "http-rest-file"
version = "0.4.0"
edition = "2021"

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json"]
rspc = ["dep:rspc"]

[dependencies]
http = "0.2.9"
regex = "1.7.3"
serde_json = {version = "1.0.96", optional = true}
serde = {version =  "1.0.160", features = ["derive"], optional = true}
rspc = { version = "0.1.3", optional = true}
url = "2.4.0"


[dev-dependencies]
pretty_assertions = "1.3.0"
