[package]
name = "http-rest-file"
version = "0.5.1"
edition = "2021"
authors = ["laeri@laeri.me"]
readme = "README.md"
repository = "https://github.com/Laeri/http-rest-file"
homepage = "https://github.com/Laeri/http-rest-file"
license = "MIT"
keywords = ["http", "parser", "jetbrains"]
categories = ["parser-implementations", "parsing"]
publish = true
description = "Parse jetbrains .http/.rest http client formatted files into a model or serialize an existing model to a file"

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json"]
rspc = ["dep:rspc"]

[dependencies]
http = "0.2.9"
regex = "1.7.3"
serde_json = {version = "1.0.96", optional = true}
serde = {version =  "1.0.160", features = ["derive"], optional = true}
rspc = { version = "0.1.3", optional = true}
url = "2.4.0"
thiserror = "1.0.43"


[dev-dependencies]
pretty_assertions = "1.3.0"
